--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
-<head><title>Phung Portfolio</title></head>
+
 <body>
-  <h1>Welcome to My Data Portfolio</h1>
-  <p>Explore my projects in Data Analysis and Machine Learning.</p>
+  <h1>YOUR NAME</h1>
+  <p>Welcome to my website!</p>
+  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
+
 </html>
