--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                         <div class="project-content">
                             <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px;">
                                 <h3 style="margin: 0;">CRAWLING: Adidas10KParis</h3>
-                                <a href="https://github.com/yourusername/project1" target="_blank" class="github-link">
+                                <a href="https://github.com/sophieanalytics/Phung-portfolio/blob/main/1.%20Data%20Crawling/Crawling-Adidas10KParis.ipynb" target="_blank" class="github-link">
                                     <span style="margin-right: 5px;">🔗</span> GitHub
                                 </a>
                             </div>
@@ -441,7 +441,7 @@
                         <div class="project-content">
                             <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px;">
                                 <h3 style="margin: 0;">CRAWLING: Tech in Asia - Companies</h3>
-                                <a href="https://github.com/yourusername/project1" target="_blank" class="github-link">
+                                <a href="https://github.com/sophieanalytics/Phung-portfolio/blob/main/1.%20Data%20Crawling/Crawling-Tech%20in%20asia-2024.ipynb" target="_blank" class="github-link">
                                     <span style="margin-right: 5px;">🔗</span> GitHub
                                 </a>
                             </div>
@@ -502,12 +502,12 @@
 
                      <div class="project-card">
                         <div class="project-image">
-                            <img src="image/clustering.jpg" alt="Forecasting Model">
+                            <img src="image/clustering.jpg" alt="Clustering Model">
                         </div>
                         <div class="project-content">
                             <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px;">
                                 <h3 style="margin: 0;">Pyspark - Clustering-Customer-Segmentation</h3>
-                                <a href="https://github.com/yourusername/project3" target="_blank" class="github-link">
+                                <a href="https://github.com/sophieanalytics/Phung-portfolio/blob/main/2.%20Machine%20Learning/pyspark_clustering-customer-segmentation.ipynb" target="_blank" class="github-link">
                                     <span style="margin-right: 5px;">🔗</span> GitHub
                                 </a>
                             </div>
@@ -523,12 +523,12 @@
 
                      <div class="project-card">
                         <div class="project-image">
-                            <img src="image/recommendation.png" alt="Forecasting Model">
+                            <img src="image/recommendation.png" alt="Recommendation Model">
                         </div>
                         <div class="project-content">
                             <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px;">
                                 <h3 style="margin: 0;">Pyspark - Recommendation</h3>
-                                <a href="https://github.com/yourusername/project3" target="_blank" class="github-link">
+                                <a href="https://github.com/sophieanalytics/Phung-portfolio/blob/main/2.%20Machine%20Learning/pyspark_recommendation-video-games.ipynb" target="_blank" class="github-link">
                                     <span style="margin-right: 5px;">🔗</span> GitHub
                                 </a>
                             </div>
@@ -544,12 +544,12 @@
                     
                      <div class="project-card">
                         <div class="project-image">
-                            <img src="image/Association.png" alt="Forecasting Model">
+                            <img src="image/Association.png" alt="Association Model">
                         </div>
                         <div class="project-content">
                             <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px;">
                                 <h3 style="margin: 0;">Pyspark - Association</h3>
-                                <a href="https://github.com/yourusername/project3" target="_blank" class="github-link">
+                                <a href="https://github.com/sophieanalytics/Phung-portfolio/blob/main/2.%20Machine%20Learning/pyspark_association-bakery.ipynb" target="_blank" class="github-link">
                                     <span style="margin-right: 5px;">🔗</span> GitHub
                                 </a>
                             </div>
