--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                         <div class="project-content">
                             <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px;">
                                 <h3 style="margin: 0;">Classification Model - Machine Learning</h3>
-                                <a href="https://github.com/yourusername/project3" target="_blank" class="github-link">
+                                <a href="https://github.com/sophieanalytics/Phung-portfolio/blob/main/2.%20Machine%20Learning/ML-Classification.ipynb" target="_blank" class="github-link">
                                     <span style="margin-right: 5px;">🔗</span> GitHub
                                 </a>
                             </div>
